--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,10 @@ nav a:hover {
     color: black;
 }
 
+.overflow {
+    overflow-wrap: break-word;
+}
+
 .footer {
     color: white;
     text-align: right;
