--- a/tablet.css
+++ b/tablet.css
@@ -15,6 +15,10 @@
     margin-right: 10px;
 }
 
+.overflow {
+    overflow-wrap: break-word;
+}
+
 @keyframes wavy {
     0% {
         transform: translateY(0);
